2007-03-31  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/AbiWord2Doc.py: Fix PaperStyle typos.

2007-03-29  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: load previous db if requested
	* src/gramps_main.py: load previous db if requested
	* src/ArgHandler.py: load previous db if requested

2007-03-29  Brian Matherly  <brian@gramps-project.org>
	* src/ReportBase/_ReportOptions.py
	* src/ReportBase/_Report.py
	* src/plugins/BookReport.py
	Remove "get_newpage()" and "set_newpage()" from the ReportOptions class. 
	They are not really options. The BookReportDialog now takes care of 
	inserting page breaks.

2007-03-28  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: call dbmanager if no file loaded on startup
	* src/DbManger.py: open buttons and double click
	* src/gramps_main.py: use "Family Trees"

2007-03-28  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/DataViews/_NoteView.py: enable shortcuts and drag-and-drop.
	* src/Bookmarks.py (NoteBookmarks.make_label): better note label.
	* src/DisplayTabs/_NoteModel.py: better note label for preview.
	* src/DisplayTabs/_NoteTab.py: enable accepting drag-and-drop notes.
	* src/ScratchPad.py: ScratchPadNote added.
	* src/DdTargets.py: NOTE_LINK added.

2007-03-28  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/DataViews/_NoteView.py: put back column editor support.
	* src/GrampsDb/_GrampsDbBase.py (get_note_column_order): fix default
	values.
	* src/DisplayModels/_NoteModel.py: include marker column.

2007-03-27  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: pass dbstate to DbManager
	* src/DbManager.py: add icon, prevent deletion of open db, make buttons
	do the sensible thing, prevent duplicate names when creating a new db.

2007-03-27  Brian Matherly  <brian@gramps-project.org>
	* src/ReportBase/_ReportDialog.py
	* src/ReportBase/_BareReportDialog.py
	* src/plugins/BookReport.py