@@ -76,6 +76,7 @@ class ODFDoc(BaseDoc.BaseDoc):
 
     def __init__(self,styles,type,template):
         BaseDoc.BaseDoc.__init__(self,styles,type,template)
+        self.media_list = []
         self.cntnt = None
         self.filename = None
         self.level = 0
